--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- header -->
     <header class="header">
-      <img src="./assets/images/img_logo.png" />
+      <img src="./assets/images/img-header_logo.png" />
 
       <nav class="navbar">
         <a href="#"
@@ -49,20 +49,173 @@
           plan, analyze and manage everyday tasks
         </p>
 
-        <a href="" class="btn">Try whitespace free</a>
+        <a href="" class="btn"
+          >Try whitespace free
+          <i class="bx bx-right-arrow-alt"></i>
+        </a>
       </div>
 
       <div class="home-img">
-        <img src="./assets/images/home-img.png" alt="" />
+        <img src="./assets/images/img-home.png" alt="" />
       </div>
     </section>
 
     <!-- design about  -->
     <section class="about" id="about">
       <div class="about-content">
-        <h2></h2>
-        <p></p>
+        <div class="about-headline">
+          <div class="text-block">
+            <h1>Project Management</h1>
+            <p>
+              Images, videos, PDFs and audio files are supported. Create math
+              expressions and diagrams directly from the app. Take photos with
+              the mobile app and save them to a note.
+            </p>
+          </div>
+          <a href="" class="btn"
+            >Get Started
+            <i class="bx bx-right-arrow-alt"></i>
+          </a>
+        </div>
+        <img src="./assets/images/img-about.png" alt="" />
+      </div>
+
+      <div class="about-container">
+        <div class="about-box">
+          <img src="./assets/images/img-about_circle.png" alt="" />
+        </div>
+
+        <div class="about-work">
+          <div class="work-together">
+            <h1>Work together</h1>
+            <p>
+              With whitepace, share your notes with your colleagues and
+              collaborate on them. You can also publish a note to the internet
+              and share the URL with others.
+            </p>
+          </div>
+          <a href="" class="btn"
+            >Try it now
+            <i class="bx bx-right-arrow-alt"></i>
+          </a>
+        </div>
       </div>
     </section>
+
+    <!-- design section 3 -->
+    <section class="extension">
+      <div class="extension-heading">
+        <div class="extension-text">
+          <h1>Use as Extension</h1>
+          <img src="./assets/images/img-extension-text.png" alt="" />
+          <p>
+            Use the web clipper extension, available on Chrome and Firefox, to
+            save web pages or take screenshots as notes.
+          </p>
+        </div>
+        <a href="" class="btn"
+          >Let’s Go
+          <i class="bx bx-right-arrow-alt"></i>
+        </a>
+      </div>
+
+      <div class="extension-content">
+        <img src="./assets/images/img-extension_content.jpg" alt="" />
+      </div>
+    </section>
+
+    <!-- design section 4  -->
+    <section class="customise">
+      <div class="customise-content">
+        <img src="./assets/images/img-customise_content.jpg" alt="" />
+      </div>
+      <div class="customise-heading">
+        <div class="customise-text">
+          <h1>Customise it to your needs</h1>
+          <p>
+            Customise the app with plugins, custom themes and multiple text
+            editors (Rich Text or Markdown). Or create your own scripts and
+            plugins using the Extension API.
+          </p>
+        </div>
+        <a href="" class="btn"
+          >Let’s Go
+          <i class="bx bx-right-arrow-alt"></i>
+        </a>
+      </div>
+    </section>
+
+    <!-- design section 5  -->
+    <section class="plan">
+      <div class="plan-pricing">
+        <div class="plan-heading">
+          <h1>Choose Your Plan</h1>
+          <p>
+            Whether you want to get organized, keep your personal life on track,
+            or boost workplace productivity, Evernote has the right plan for
+            you.
+          </p>
+        </div>
+
+        <div class="plan-price_list">
+          <div class="plan-price_board1">
+            <img src="/assets/images/img-price_board.png" alt="" />
+          </div>
+
+          <div class="plan-price_board2">
+            <img src="./assets/images/img-price_board2.png" alt="" />
+          </div>
+
+          <div class="plan-price_board3">
+            <img src="/assets/images/img-price_board3.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- design section 6  -->
+    <section class="section6">
+      <div class="section6-heading">
+        <div class="section6-text">
+          <h1>Your work, everywhere you are</h1>
+          <p>
+            Access your notes from your computer, phone or tablet by
+            synchronising with various services, including whitepace, Dropbox
+            and OneDrive. The app is available on Windows, macOS, Linux, Android
+            and iOS. A terminal app is also available!
+          </p>
+        </div>
+        <a href="" class="btn"
+          >Try Taskey
+          <i class="bx bx-right-arrow-alt"></i>
+        </a>
+      </div>
+    </section>
+
+    <!-- design section 7 -->
+    <section class="data">
+      <div class="heading">
+        <div class="text-block">
+          <h1>100% your data</h1>
+          <p>
+            The app is open source and your notes are saved to an open format,
+            so you'll always have access to them. Uses End-To-End Encryption
+            (E2EE) to secure your notes and ensure no-one but yourself can
+            access them.
+          </p>
+        </div>
+        <a href="" class="btn"
+          >Read more
+          <i class="bx bx-right-arrow-alt"></i>
+        </a>
+      </div>
+
+      <div class="element">
+        <img src="./assets/images/img-data-element.png" alt="" />
+      </div>
+    </section>
+
+    <!-- design section 8  -->
+    <section class=""></section>
   </body>
 </html>
