--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
         <div class="display__column-center section-sixth__Our-sponsors">
             <div class="display__column-center position__relative z-index__1 section-sixth__Our-sponsors--block">
-                <p class="font__700-72 color__black margin__24 z-index__3">Our sponsors</p>
+                <p class="font__700-72 color__black z-index__3">Our sponsors</p>
                 <img class="position__absolute z-index__2 section-sixth__Our-sponsors--highlight-image" src="./assets/images/section-sixth__Our-sponsors--highlight-image.png" />
             </div>
             <div class="display__space-between section-sixth__Our-sponsors--container">
