doProduct  section done

--- a/index.html
+++ b/index.html
@@ -216,6 +216,120 @@
     </section>
 
     <!-- design section 8  -->
-    <section class=""></section>
+    <section class="sponsors">
+      <h1>Our sponsors</h1>
+
+      <div class="sponsors-box">
+        <img src="./assets/images/img-sponsors_logo1.png" alt="" />
+        <img src="./assets/images/img-sponsors_logo2.png" alt="" />
+        <img src="./assets/images/img-sponsors_logo3.png" alt="" />
+        <img src="./assets/images/img-sponsors_logo4.png" alt="" />
+      </div>
+    </section>
+
+    <!-- design section 9 -->
+    <section class="apps" id="apps">
+      <div class="apps-logo">
+        <img src="./assets/images/img-apps_logo.png" alt="" />
+      </div>
+
+      <div class="apps-heading">
+        <div class="apps-text">
+          <h1>Work with Your Favorite Apps Using whitepace</h1>
+          <p>
+            Whitepace teams up with your favorite software. Integrate with over
+            1000+ apps with Zapier to have all the tools you need for your
+            project success.
+          </p>
+        </div>
+        <a href="" class="btn"
+          >Read more
+          <i class="bx bx-right-arrow-alt"></i>
+          <img src="./assets/images/img-apps_element.png" alt="" />
+        </a>
+      </div>
+    </section>
+
+    <!-- design section 10  -->
+    <section class="testimonial">
+      <h1>What Our Clients Says</h1>
+      <div class="testimonial_content">
+        <div class="testimonial_client1">
+          <div class="comment">
+            <img src="./assets/images/img-testimonial_quote.png" alt="" />
+
+            <div class="text">
+              Whitespace is designed as a collaboration tool for businesses that
+              is a full project management solution.
+            </div>
+          </div>
+
+          <div class="name-box">
+            <img src="./assets/images/img-testimonial_text-box.png" alt="" />
+          </div>
+        </div>
+
+        <div class="testimonial_client2">
+          <div class="comment">
+            <img src="./assets/images/img-testimonial_quote2.png" alt="" />
+
+            <div class="text">
+              Whitespace is designed as a collaboration tool for businesses that
+              is a full project management solution.
+            </div>
+          </div>
+
+          <div class="name-box">
+            <img src="./assets/images/img-testimonial_text-box2.png" alt="" />
+          </div>
+        </div>
+
+        <div class="testimonial_client2">
+          <div class="comment">
+            <img src="./assets/images/img-testimonial_quote2.png" alt="" />
+
+            <div class="text">
+              Whitespace is designed as a collaboration tool for businesses that
+              is a full project management solution.
+            </div>
+          </div>
+
+          <div class="name-box">
+            <img src="./assets/images/img-testimonial_text-box3.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial_slider">
+        <img src="./assets/images/img-testimonial_slider.png" alt="" />
+      </div>
+    </section>
+
+    <!-- design section 11  -->
+    <section class="free_trial">
+      <div class="free_trial-heading">
+        <div class="free_trial-text">
+          <h1>Try Whitepace today</h1>
+          <p>Get started for free. Add your whole team as your needs grow.</p>
+        </div>
+        <a href="" class="btn"
+          >Try Taskey free
+          <i class="bx bx-right-arrow-alt"></i>
+        </a>
+        <p>On a big team? Contact sales</p>
+        <img src="./assets/images/img-free_trial-icon.png" alt="" />
+      </div>
+    </section>
+
+    <!-- design footer  -->
+    <section class="footer">
+      <div class="content">
+        <div class="info"></div>
+        <img src="./assets/images/img-footer_info.png" alt="" />
+        <div class="btm">
+          <img src="./assets/images/img-footer_btm.png" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
