--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="display__column-center section-fourth__Choose-Your-Plan">
             <div class="display__column-center position__relative z-index__1 section-fourth__Choose-Your-Plan--block">
                 <p class="font__700-72 color__black margin__24 z-index__3">Choose Your Plan</p>
-                <p class="font__400-18 color__black">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
+                <p class="font__400-18 color__black text-align__center">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
                 <img class="position__absolute z-index__2 section-fourth__Choose-Your-Plan--highlight-image" src="./assets/images/section-fourth__Choose-Your-Plan--highlight-image.png" />
             </div>
             <div class="section-fourth__Choose-Your-Plan--Free-Personal-Organization">
@@ -169,7 +169,36 @@
     </section>
 
     <section class="background-color__blue1 section-seventh">
+        <div class="display__space-between position__relative section-seventh__Work-with-Your-Favorite-Apps-Using-whitepace">
+            <img class="position__absolute section-seventh__Work-with-Your-Favorite-Apps-Using-whitepace--background-image" src="./assets/images/section-seventh__Work-with-Your-Favorite-Apps-Using-whitepace--background-image.png" />
+            <div class="z-index__1 section-seventh__Work-with-Your-Favorite-Apps-Using-whitepace--container"><img class="section-seventh__Work-with-Your-Favorite-Apps-Using-whitepace--banner-image" src="./assets/images/section-seventh__Work-with-Your-Favorite-Apps-Using-whitepace--banner-image.png" /></div>
+            <div class="display__column-flex-start-center z-index__1 section-seventh__Work-with-Your-Favorite-Apps-Using-whitepace--block">
+                <p class="font__700-72 color__white margin__24">Work with Your Favorite Apps Using whitepace</p>
+                <p class="font__400-18 color__white margin__60">Whitepace teams up with your favorite software. Integrate with over 1000+ apps with Zapier to have all the tools you need for your project success.</p>
+                <button class="button__20402040-8-500-18">Read more<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
+            </div>
+        </div>
+    </section>
 
+    <section class="background-color__white section-eighth">
+        <div class="display__column-center section-eighth__What-Our-Clients-Says">
+            <div class="display__column-center position__relative z-index__1 section-eighth__What-Our-Clients-Says--block">
+                <p class="font__700-70 color__black z-index__3">What Our Clients Says</p>
+                <img class="position__absolute z-index__2 section-eighth__What-Our-Clients-Says--highlight-image" src="./assets/images/section-eighth__What-Our-Clients-Says--highlight-image.png" />
+            </div>
+            <div class="display__space-between section-eighth__What-Our-Clients-Says--container">
+                <div class="section-eighth__What-Our-Clients-Says--left">
+                    <div class="section-eighth__What-Our-Clients-Says--left-first margin__60"><img class="margin__32" src="./assets/images/quotes-left.png" /><p class="font__400-18 color__black margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
+                    <div class="section-eighth__What-Our-Clients-Says--left-second display__space-between"><img class="avatar" src="./assets/images/avatar-left.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="font__400-16 color__black margin__4">Head of Talent Acquisition, North America</p></div></div>
+                </div>
+                <div class="section-eighth__What-Our-Clients-Says--center">
+
+                </div>
+                <div class="section-eighth__What-Our-Clients-Says--right">
+
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
