--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
             </a>
           </div>
           <div class="first-section__content-top-section__right-side">
-            <div
-              class="first-section__content-top-section__right-side__image-container"
-            ></div>
+            <img src="./Image/ảnh 1.jpg" />
           </div>
         </div>
       </section>
@@ -107,9 +105,7 @@
           </div>
 
           <div class="second-section__first-content__right-side">
-            <div
-              class="second-section__first-content__right-side__image-container"
-            ></div>
+            <img src="./Image/ảnh 2.jpg" />
           </div>
         </div>
 
@@ -157,9 +153,7 @@
           </div>
 
           <div class="thirt-section__first-content__right-side">
-            <div
-              class="thirt-section__first-content__right-side__image-container"
-            ></div>
+            <img src="./Image/ảnh 3.jpg" />
           </div>
         </div>
       </section>
@@ -167,9 +161,7 @@
       <section id="four-section">
         <div class="four-section__first-content">
           <div class="four-section__first-content__left-side">
-            <div
-              class="four-section__first-content__left-side__image-container"
-            ></div>
+            <img src="./image/ảnh 4.jpg" />
           </div>
 
           <div class="four-section__first-content__right-side">
@@ -194,6 +186,7 @@
         <div class="four-section__second-content">
           <div class="four-section__second-content__heading">
             <h6>Choose your plan</h6>
+
             <h5>
               Whether you want to get organized, keep your personal life on
               track, or boost workplace productivity, Evernote has the right
@@ -371,8 +364,106 @@
 
           <a href="#" class="five-section__first-content__btn-try">
             <h6>Try Taskey</h6>
-            <img src="./Icon/icon_arrow-next.png">
+            <img src="./Icon/icon_arrow-next.png" />
           </a>
+        </div>
+      </section>
+
+      <section id="six-section">
+        <div class="six-section__first-content">
+          <div class="six-section__first-content__left-side">
+            <h6>100% your data</h6>
+
+            <h5>
+              The app is open source and your notes are saved to an open format,
+              so you'll always have access to them. Uses End-To-End Encryption
+              (E2EE) to secure your notes and ensure no-one but yourself can
+              access them.
+            </h5>
+
+            <a href="#" class="six-section__first-content__left-side__btn-try">
+              <h6>Read more</h6>
+              <img src="./Icon/icon_arrow-next.png" />
+            </a>
+          </div>
+
+          <div class="six-section__first-content__right-side">
+            <img src="./Image/img-element-2.png" />
+          </div>
+        </div>
+
+        <div class="six-section__second-content">
+          <div class="six-section__second-content__heading">
+            <h6>Our sponsors</h6>
+          </div>
+
+          <div class="six-section__second-content__sponsors">
+            <img src="./Image/img_apple.png" />
+            <img src="./Image/img_microsoft.png" />
+            <img src="./Image/img_slack.png" />
+            <img src="./Image/img_google.png" />
+          </div>
+        </div>
+      </section>
+
+      <section id="seven-section">
+        <div class="seven-section__first-content">
+          <div class="seven-section__first-content__left-side">
+            <img src="./Image/img_apps.png" />
+          </div>
+
+          <div class="seven-section__first-content__right-side">
+            <h6>Work with Your Favorite Apps Using whitepace</h6>
+
+            <h5>
+              Whitepace teams up with your favorite software. Integrate with
+              over 1000+ apps with Zapier to have all the tools you need for
+              your project success.
+            </h5>
+
+            <a
+              href="#"
+              class="seven-section__first-content__right-side__btn-try"
+            >
+              Read more
+              <img src="./Icon/icon_arrow-next.png" />
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section id="eighth-section">
+        <div class="eighth-section__first-content">
+          <div class="eighth-section__first-content__heading">
+            What Our Clients Says
+          </div>
+
+          <div class="eighth-section__first-content__list-board">
+            <div
+              class="eighth-section__first-content__list-board__child-board-1"
+            >
+              <img src="./Image/img_quote-black.png" />
+
+              <h6>
+                Whitepate is designed as a collaboration tool for businesses
+                that is a full project management solution
+              </h6>
+
+              <div
+                class="eighth-section__first-content__list-board__child-board-1__name-box"
+              >
+                <img src="./Image/img_avatar-1.png" />
+
+                <div
+                  class="eighth-section__first-content__list-board__child-board-1__name-box__right-side"
+                >
+                  <h6>Oberon Shaw, MCH</h6>
+
+                  <h5>Head of Talent Acquisition, North America</h5>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
