--- a/index.html
+++ b/index.html
@@ -192,10 +192,12 @@
                     <div class="section-eighth__What-Our-Clients-Says--left-second display__space-between"><img class="avatar" src="./assets/images/avatar-left.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="font__400-16 color__black margin__4">Head of Talent Acquisition, North America</p></div></div>
                 </div>
                 <div class="section-eighth__What-Our-Clients-Says--center">
-
+                    <div class="section-eighth__What-Our-Clients-Says--center-first margin__60"><img class="margin__32" src="./assets/images/quotes-center.png" /><p class="font__400-18 color__white margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
+                    <div class="section-eighth__What-Our-Clients-Says--center-second display__space-between"><img class="avatar" src="./assets/images/avatar-center.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
                 </div>
                 <div class="section-eighth__What-Our-Clients-Says--right">
-
+                    <div class="section-eighth__What-Our-Clients-Says--right-first margin__60"><img class="margin__32" src="./assets/images/quotes-right.png" /><p class="font__400-18 color__white margin__40">Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p></div>
+                    <div class="section-eighth__What-Our-Clients-Says--right-second display__space-between"><img class="avatar" src="./assets/images/avatar-right.png" /><div><p class="font__600-24 color__black margin__15">Oberon Shaw, MCH</p><p class="font__400-16 color__white margin__4">Head of Talent Acquisition, North America</p></div></div>
                 </div>
             </div>
         </div>
