doProduct responsive 2 done

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </header>
 
     <!-- design home -->
-    <section class="home" id="home">
-      <div class="home-content">
+    <section id="home">
+      <div class="home__content">
         <h2>Get More Done with whitepace</h2>
         <p>
           Project management software that enables your teams to collaborate,
@@ -55,16 +55,16 @@
         </a>
       </div>
 
-      <div class="home-img">
+      <div class="home__img">
         <img src="./assets/images/img-home.png" alt="" />
       </div>
     </section>
 
     <!-- design about  -->
-    <section class="about" id="about">
-      <div class="about-content">
-        <div class="about-headline">
-          <div class="text-block">
+    <section id="about">
+      <div class="about__content">
+        <div class="about__headline">
+          <div class="about__text--block">
             <h1>Project Management</h1>
             <p>
               Images, videos, PDFs and audio files are supported. Create math
@@ -80,13 +80,11 @@
         <img src="./assets/images/img-about.png" alt="" />
       </div>
 
-      <div class="about-container">
-        <div class="about-box">
-          <img src="./assets/images/img-about_circle.png" alt="" />
-        </div>
+      <div class="about__container">
+        <img src="./assets/images/img-about_circle.png" alt="" />
 
-        <div class="about-work">
-          <div class="work-together">
+        <div class="about__work">
+          <div class="about__work--together">
             <h1>Work together</h1>
             <p>
               With whitepace, share your notes with your colleagues and
@@ -103,9 +101,9 @@
     </section>
 
     <!-- design section 3 -->
-    <section class="extension">
-      <div class="extension-heading">
-        <div class="extension-text">
+    <section id="extension">
+      <div class="extension__heading">
+        <div class="extension__text">
           <h1>Use as Extension</h1>
           <img src="./assets/images/img-extension-text.png" alt="" />
           <p>
@@ -119,18 +117,17 @@
         </a>
       </div>
 
-      <div class="extension-content">
+      <div class="extension__content">
         <img src="./assets/images/img-extension_content.jpg" alt="" />
       </div>
     </section>
 
     <!-- design section 4  -->
-    <section class="customise">
-      <div class="customise-content">
-        <img src="./assets/images/img-customise_content.jpg" alt="" />
-      </div>
-      <div class="customise-heading">
-        <div class="customise-text">
+    <section id="customise">
+      <img src="./assets/images/img-customise_content.jpg" alt="" />
+
+      <div class="customise__heading">
+        <div class="customise__text">
           <h1>Customise it to your needs</h1>
           <p>
             Customise the app with plugins, custom themes and multiple text
@@ -146,37 +143,34 @@
     </section>
 
     <!-- design section 5  -->
-    <section class="plan">
-      <div class="plan-pricing">
-        <div class="plan-heading">
-          <h1>Choose Your Plan</h1>
-          <p>
-            Whether you want to get organized, keep your personal life on track,
-            or boost workplace productivity, Evernote has the right plan for
-            you.
-          </p>
+    <section id="plan">
+      <div class="plan__heading">
+        <h1>Choose Your Plan</h1>
+        <p>
+          Whether you want to get organized, keep your personal life on track,
+          or boost workplace productivity, Evernote has the right plan for you.
+        </p>
+      </div>
+
+      <div class="plan__price--list">
+        <div class="plan__price--board1">
+          <img src="/assets/images/img-price_board.png" alt="" />
         </div>
 
-        <div class="plan-price_list">
-          <div class="plan-price_board1">
-            <img src="/assets/images/img-price_board.png" alt="" />
-          </div>
+        <div class="plan__price--board2">
+          <img src="./assets/images/img-price_board2.png" alt="" />
+        </div>
 
-          <div class="plan-price_board2">
-            <img src="./assets/images/img-price_board2.png" alt="" />
-          </div>
-
-          <div class="plan-price_board3">
-            <img src="/assets/images/img-price_board3.png" alt="" />
-          </div>
+        <div class="plan__price--board3">
+          <img src="/assets/images/img-price_board3.png" alt="" />
         </div>
       </div>
     </section>
 
     <!-- design section 6  -->
-    <section class="section6">
-      <div class="section6-heading">
-        <div class="section6-text">
+    <section id="section6">
+      <div class="section6__heading">
+        <div class="section6__text">
           <h1>Your work, everywhere you are</h1>
           <p>
             Access your notes from your computer, phone or tablet by
@@ -193,9 +187,9 @@
     </section>
 
     <!-- design section 7 -->
-    <section class="data">
-      <div class="heading">
-        <div class="text-block">
+    <section id="data">
+      <div class="data__heading">
+        <div class="data__text--block">
           <h1>100% your data</h1>
           <p>
             The app is open source and your notes are saved to an open format,
@@ -210,16 +204,16 @@
         </a>
       </div>
 
-      <div class="element">
+      <div class="data__element">
         <img src="./assets/images/img-data-element.png" alt="" />
       </div>
     </section>
 
     <!-- design section 8  -->
-    <section class="sponsors">
+    <section id="sponsors">
       <h1>Our sponsors</h1>
 
-      <div class="sponsors-box">
+      <div class="sponsors__box">
         <img src="./assets/images/img-sponsors_logo1.png" alt="" />
         <img src="./assets/images/img-sponsors_logo2.png" alt="" />
         <img src="./assets/images/img-sponsors_logo3.png" alt="" />
@@ -228,13 +222,13 @@
     </section>
 
     <!-- design section 9 -->
-    <section class="apps" id="apps">
-      <div class="apps-logo">
+    <section id="apps">
+      <div class="apps__logo">
         <img src="./assets/images/img-apps_logo.png" alt="" />
       </div>
 
-      <div class="apps-heading">
-        <div class="apps-text">
+      <div class="apps__heading">
+        <div class="apps__text">
           <h1>Work with Your Favorite Apps Using whitepace</h1>
           <p>
             Whitepace teams up with your favorite software. Integrate with over
@@ -251,10 +245,10 @@
     </section>
 
     <!-- design section 10  -->
-    <section class="testimonial">
+    <section id="testimonial">
       <h1>What Our Clients Says</h1>
-      <div class="testimonial_content">
-        <div class="testimonial_client1">
+      <div class="testimonial__content">
+        <div class="testimonial__client1">
           <div class="comment">
             <img src="./assets/images/img-testimonial_quote.png" alt="" />
 
@@ -269,7 +263,7 @@
           </div>
         </div>
 
-        <div class="testimonial_client2">
+        <div class="testimonial__client2">
           <div class="comment">
             <img src="./assets/images/img-testimonial_quote.png" alt="" />
 
@@ -284,7 +278,7 @@
           </div>
         </div>
 
-        <div class="testimonial_client2">
+        <div class="testimonial__client2">
           <div class="comment">
             <img src="./assets/images/img-testimonial_quote.png" alt="" />
 
@@ -300,15 +294,15 @@
         </div>
       </div>
 
-      <div class="testimonial_slider">
+      <div class="testimonial__slider">
         <img src="./assets/images/img-testimonial_slider.png" alt="" />
       </div>
     </section>
 
     <!-- design section 11  -->
-    <section class="free_trial">
-      <div class="free_trial-heading">
-        <div class="free_trial-text">
+    <section id="free__trial">
+      <div class="free__trial--heading">
+        <div class="free__trial--text">
           <h1>Try Whitepace today</h1>
           <p>Get started for free. Add your whole team as your needs grow.</p>
         </div>
@@ -322,7 +316,7 @@
     </section>
 
     <!-- design footer  -->
-    <section class="footer">
+    <section id="footer">
       <div class="content">
         <div class="info"></div>
         <img src="./assets/images/img-footer_info.png" alt="" />
